# the-mind

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  stack.yaml
backend/: backend.cabal
backend/src/: Backend.hs
backend/src-bin/: main.hs
backend/src/Backend/: Server.hs
backend/src/Backend/Examples/WebSocketChat/: Server.hs
common/: common.cabal
common/src/Common/: Message.hs
common/src/Common/Examples/WebSocketChat/: Message.hs
frontend/: frontend.cabal
frontend/src/: Frontend.hs
frontend/src-bin/: main.hs
frontend/src/Frontend/: Game.hs  Head.hs
frontend/src/Frontend/Examples/ECharts/: Main.hs
frontend/src/Frontend/Examples/WebSocketChat/: Main.hs
nginx/: nginx.conf
static/: index.html
static/css/: style.css
