name: backend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , aeson
               , bytestring
               , common
               , containers
               , http-types
               , lens
               , text
               , wai
               , wai-app-static
               , wai-websockets
               , warp
               , websockets
  exposed-modules:
    Backend
    Backend.Server
  ghc-options: -Wall

executable backend
  main-is: main.hs
  hs-source-dirs: src-bin
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , backend
  ghc-options: -threaded
