name: frontend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base
               , aeson
               , bytestring
               , common
               , containers
               , lens
               , reflex
               , reflex-dom
               , text
  exposed-modules:
    Frontend
    Frontend.FontAwesome
    Frontend.Head
    Frontend.Game
  ghc-options: -Wall

executable frontend
  main-is: main.hs
  hs-source-dirs: src-bin
  build-depends: base
               , frontend
  ghc-options: -threaded
  if os(darwin)
    ghc-options: -dynamic
